Added TPC8 (not completed)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ TPC5/Server/node_modules/
 TPC6/Server/node_modules/
 TPC7/movies.json
 TPC7/app/node_modules/
+TPC8/prize.json
+TPC8/app/node_modules/
