--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Aula9/ex1/app/node_modules/
 Aula9/ex1/datasets/
 Aula9/ex2/app/node_modules/
 TPC10/app/node_modules/
+Teste/p1/app/node_modules/
+Teste/p2/app/node_modules/
